# studentperformancepredictor

./: .gitignore  Dockerfile.api  Dockerfile.ui  LICENSE  README.md  best_linear_model.pkl  docker-compose.yml  pyproject.toml
api/: main.py  models.py  utils.py
ui/: app.py
