[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
